--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     <label for="phone">Phone Number:</label>
     <input type="tel" id="phone" name="phone" required><br><br>
 
-    <button type="submit">Submit</button>
+    <button type="submit">Submit Form</button>
   </form>
 </body>
 </html>
